[gd_scene load_steps=14 format=2]

[ext_resource path="res://images/backgrounds/background-day-loop.png" type="Texture" id=1]
[ext_resource path="res://images/text/gameover.png" type="Texture" id=2]
[ext_resource path="res://scenes/animations/gameOverLogo.tres" type="Animation" id=3]
[ext_resource path="res://scripts/gameoverScript.gd" type="Script" id=4]
[ext_resource path="res://images/buttons/menu_button.png" type="Texture" id=5]
[ext_resource path="res://images/buttons/restart_button.png" type="Texture" id=6]
[ext_resource path="res://images/backgrounds/gameover_board.png" type="Texture" id=7]
[ext_resource path="res://scripts/scorePanel.gd" type="Script" id=8]
[ext_resource path="res://images/smallLetters/0.png" type="Texture" id=10]

[sub_resource type="Animation" id=2]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "buttonAnimation"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "showPanel"
length = 2.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="GameOverPanel" type="Node2D"]
script = ExtResource( 4 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 600, 400 )
scale = Vector2( 1.6317, 1.6317 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 800, 500 )
__meta__ = {
"_edit_lock_": true
}

[node name="gameOver" type="Sprite" parent="."]
visible = false
position = Vector2( 600, 400 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="gameOver"]
anims/gameOverAnimation = ExtResource( 3 )

[node name="buttonContainer" type="HBoxContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 350.0
margin_top = 600.0
margin_right = 850.0
margin_bottom = 750.0
alignment = 1

[node name="menuButton" type="TextureButton" parent="buttonContainer"]
margin_right = 248.0
margin_bottom = 150.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="restartButton" type="TextureButton" parent="buttonContainer"]
margin_left = 252.0
margin_right = 500.0
margin_bottom = 150.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="buttonContainer"]
anims/RESET = SubResource( 2 )
anims/buttonAnimation = SubResource( 1 )

[node name="scorePanel" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 600, 400 )
scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 7 )
script = ExtResource( 8 )

[node name="scoreCounter" type="Control" parent="scorePanel"]
margin_left = 28.5
margin_top = -12.0
margin_right = 43.5
margin_bottom = -3.0

[node name="digit1" type="Sprite" parent="scorePanel/scoreCounter"]
texture = ExtResource( 10 )
centered = false

[node name="digit2" type="Sprite" parent="scorePanel/scoreCounter"]
position = Vector2( 7, 0 )
texture = ExtResource( 10 )
centered = false

[node name="highscoreCounter" type="Control" parent="scorePanel"]
margin_left = 28.5
margin_top = 9.0
margin_right = 43.5
margin_bottom = 18.0

[node name="digit1" type="Sprite" parent="scorePanel/highscoreCounter"]
texture = ExtResource( 10 )
centered = false

[node name="digit2" type="Sprite" parent="scorePanel/highscoreCounter"]
position = Vector2( 7, 0 )
texture = ExtResource( 10 )
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="scorePanel"]
anims/RESET = SubResource( 3 )
anims/showPanel = SubResource( 4 )

[connection signal="pressed" from="buttonContainer/menuButton" to="." method="_on_menuButton_pressed"]
[connection signal="pressed" from="buttonContainer/restartButton" to="." method="_on_restartButton_pressed"]
